# Trading_agent

./: README.md  pyproject.toml
config/: example.yaml  price_only.yaml  rule_based.yaml
data/: events.csv
data/market/: 医药.csv  半导体.csv  新能源.csv  银行.csv
data/reports/: 0001_新能源_20250801.txt  0002_半导体_20250803.txt
outputs/price_only_run/: daily_records.csv  decisions.json  summary.json
outputs/run_01/: daily_records.csv  decisions.json  summary.json
src/industry_trading_agent/: __init__.py  agent.py  cli.py  config.py  data_loader.py  data_models.py  environment.py  retrieval.py  runner.py
src/industry_trading_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/industry_trading_agent/providers/: llm_factory.py  rule_based.py
