[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industry-trading-agent"
version = "0.1.0"
description = "LangChain-based industry trading environment and agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "pypdf>=4.3.1"
]

[project.scripts]
trade-sim = "industry_trading_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
